# llmO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_existing_ir_artifacts.py  run_builds.py
20260706benchmark-builds/: llm_benchmark_summary.json  summary.json  summary_all.json
20260706benchmark-builds/clang_O0/: benchmark_0_fibonacci_stdout.txt  benchmark_1_format_list_stdout.txt  benchmark_2_repeated_sort_stdout.txt  benchmark_3_count_matches_stdout.txt  build_metadata.json  build_stdout.txt  compile_commands.json  configure_stdout.txt
20260706benchmark-builds/clang_O1/: benchmark_0_fibonacci_stdout.txt  benchmark_1_format_list_stdout.txt  benchmark_2_repeated_sort_stdout.txt  benchmark_3_count_matches_stdout.txt  benchmark_4_top_words_from_file_stdout.txt  build_metadata.json
20260707benchmark-builds/: llm_benchmark_summary.json  summary.json  summary_all.json
20260708benchmark-builds/: llm_benchmark_summary.json  summary.json  summary_all.json
20260712benchmark-builds/: summary.json
20260713benchmark-builds/: llm_benchmark_summary.json  summary.json  summary_all.json
SUT/: CMakeLists.txt  count_matches.cpp  free_functions.cpp  library.cpp  library.h  repeated_sort.cpp  sut_common.h  top_words_from_file.cpp
librunner/: CMakeLists.txt  benchmarks.cpp  benchmarks.h  count_matches_tests.cpp  count_matches_tests.h  fibonacci_tests.cpp  fibonacci_tests.h  format_list_tests.cpp  format_list_tests.h  main.cpp  repeated_sort_tests.cpp  repeated_sort_tests.h  sut_api.h  top_words_from_file_tests.cpp  top_words_from_file_tests.h
(+1528 files in other folders)
